Implementation of returning ticker summaries using filters and search and sorting